# yt2feed

./: README.md  create_feed.py  download.sh  pyproject.toml  shell.nix  yt2feed.py  yt2feed.sh
resources/: style.xsl
templates/: feed.xml.jinja
